--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   mapbox_search: any
   mapbox_gl: ^0.16.0
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
