--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   quickalert: ^1.1.0
   flutter_tts: ^4.0.1
+  flutter_dotenv: ^5.1.0
+  mapbox_search: any
+  mapbox_gl: ^0.16.0
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +67,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/.env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
