:iphone: add progress bar and prompt generation

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   mapbox_search: any
   mapbox_gl: ^0.16.0
   geolocator: ^11.0.0
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
