RPG main page (#3)
* :iphone: add progress bar and prompt generation

* :sparkles: add progress bar and choosing page

* :bug: fix build_main to statefulwidget

* :bug: can't enter main page until no errors and confirm

* :sparkles: add TTS to RPG page

* :sparkles: add voice text

* :art: remove macos and linux

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   mapbox_search: any
   mapbox_gl: ^0.16.0
   geolocator: ^11.0.0
+  loading_animation_widget: ^1.2.1
+  redux: ^5.0.0
+  flutter_redux: ^0.10.0
 
 dev_dependencies:
   flutter_test:
