:sparkles: speak when tapping the microphone below

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   loading_animation_widget: ^1.2.1
   redux: ^5.0.0
   flutter_redux: ^0.10.0
+  speech_to_text: ^6.6.0
 
 dev_dependencies:
   flutter_test:
