--- a/app/ios/Runner/Info.plist
+++ b/app/ios/Runner/Info.plist
@@ -28,6 +28,11 @@
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app needs access to location when open.</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>This app needs access to your microphone when listening to your words.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Need microphone access for uploading audio</string>
+
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
