Server final update

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,7 +3,15 @@ FROM python:3.9
 WORKDIR /app
 COPY . /app/
 
+ARG OPENAI_API_KEY
+ARG GEN_STORY_ASSISTANT_ID
+ARG GEN_OUTLINE_ASSISTANT_ID
+ARG GEN_SUMMARY_ASSISTANT_ID
+
 RUN pip install -r requirements.txt
-ENV OPENAI_API_KEY=sk-proj-Od5ATYnuHVQwc9rOYr1sT3BlbkFJbgocHeoWtMLTX4YF29NC
+ENV OPENAI_API_KEY=$OPENAI_API_KEY
+ENV GEN_STORY_ASSISTANT_ID=$GEN_STORY_ASSISTANT_ID
+ENV GEN_OUTLINE_ASSISTANT_ID=$GEN_OUTLINE_ASSISTANT_ID
+ENV GEN_SUMMARY_ASSISTANT_ID=$GEN_SUMMARY_ASSISTANT_ID
 
 CMD [ "python", "server.py", "--host", "0.0.0.0" ]
