--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.4"
 services:
     makentu:
         container_name: makentu
+        env_file:
+            - .env
         build:
             context: .
             dockerfile: ./Dockerfile
